<resources>
    <string name="app_label">Messaging</string>
    <string name="new_message">New message</string>
    <string name="menu_call_back">Call %s</string>
    <string name="menu_send_email">Send email to %s</string>
    <string name="menu_compose_new">Compose</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_add_address_to_contacts">Add %s to People</string>
    <string name="menu_call">Call</string>
    <string name="menu_search">Search</string>
    <string name="menu_delete_all">Delete all threads</string>
    <string name="menu_delete">Delete thread</string>
    <string name="menu_view">View thread</string>
    <string name="menu_debug_dump">DEBUG DUMP</string>
    <string name="refreshing">Refreshing…</string>
    <string name="menu_cell_broadcasts">Cell broadcasts</string>
    <string name="has_draft">Draft</string>
    <string name="no_subject_view">(No subject)</string>
    <string name="messagelist_sender_self">Me</string>
    <string name="view_slideshow">View slideshow</string>
    <string name="view_message_details">View details</string>
    <string name="view_delivery_report">View report</string>
    <string name="delete_message">Delete</string>
    <string name="sent_on">Sent: %s</string>
    <string name="expire_on">Expires: %s</string>
    <string name="received_on">Received: %s</string>
    <string name="kilobyte">KB</string>
    <string name="undelivered_msg_dialog_title">Undelivered message</string>
    <string name="undelivered_msg_dialog_body">"Couldn't send this message.
Attempt made: %s."</string>
    <string name="undelivered_sms_dialog_body">"Couldn't send this message."</string>
    <string name="delete_thread">Delete thread</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_resend">Resend</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="inline_subject">&lt;Subject: %s></string>
    <string name="drm_protected_text">* DRM protected text *</string>
    <string name="insufficient_drm_rights">Insufficient DRM rights detected.</string>
    <string name="copy_message_text">Copy text</string>
    <string name="message_options">Message options</string>
    <string name="slideshow_options">Slideshow options</string>
    <string name="done">Return</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="remove_slide">Remove slide</string>
    <string name="add_slide">Add slide</string>
    <string name="add_slide_hint">Touch to create new slide.</string>
    <string name="discard_slideshow">Discard slideshow</string>
    <string name="slide_show_part">Part %1$s/%2$s</string>
    <string name="remove_text">Remove text</string>
    <string name="add_picture">Add picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="add_music">Add music</string>
    <string name="remove_music">Remove music</string>
    <string name="add_video">Add video</string>
    <string name="remove_video">Remove video</string>
    <string name="to_hint">To</string>
    <string name="subject_hint">Subject</string>
    <string name="add_attachment">Attach</string>
    <string name="add_subject">Add subject</string>
    <string name="discard">Discard</string>
    <string name="view">View</string>
    <string name="replace">Replace</string>
    <string name="remove">Remove</string>
    <string name="send">Send</string>
    <string name="mms">MMS</string>
    <string name="send_mms">Send MMS</string>
    <string name="mms1">MMS1</string>
    <string name="mms2">MMS2</string>
    <string name="mms3">MMS3</string>
    <string name="sub1">SUB 1</string>
    <string name="sub2">SUB 2</string>
    <string name="sub3">SUB 3</string>
    <string name="all_threads">All threads</string>
    <string name="type_to_compose_text_enter_to_send">Type message</string>
    <string name="open_keyboard_to_compose_message">Open keyboard to type message</string>
    <string name="compressing">Picture too large. Compressing…</string>
    <string name="unsupported_media_format">Unsupported %1$s format.</string>
    <string name="unsupported_format">Unsupported format.</string>
    <string name="select_different_media">Choose a different %1$s.</string>
    <string name="exceed_message_size_limitation">Message size limit reached.</string>
    <string name="message_too_big_for_video">The message is too big to attach a video.</string>
    <string name="failed_to_add_media">"You can't add this %1$s to your message."</string>
    <string name="media_size_limit">"Message size limit reached, can't send out message."</string>
    <string name="failed_to_resize_image">Picture not resized.</string>
    <string name="resize_image_error_information">This picture is too large to send, even when resized.</string>
    <string name="forward_prefix">"Fwd: "</string>
    <string name="discard_message">Discard</string>
    <string name="discard_message_reason">Your message will be discarded because it has no valid recipients.</string>
    <string name="has_invalid_recipient">Invalid recipient(s): &lt;%1$s></string>
    <string name="invalid_destination">Invalid destination address.</string>
    <string name="service_not_activated">Service not activated on network.</string>
    <string name="service_message_not_found">Message expired or not available.</string>
    <string name="service_network_problem">"Couldn't send due to network problem."</string>
    <string name="invalid_recipient_message">"Correct the recipient(s) or they won't receive the message."</string>
    <string name="cannot_send_message">"Can't send message"</string>
    <string name="cannot_send_message_reason">Your message has no valid recipients.</string>
    <string name="cannot_forward_drm_obj">"The DRM object included in the message can't be forwarded."</string>
    <string name="converting_to_picture_message">Converting to multimedia message…</string>
    <string name="converting_to_text_message">Converting to text message…</string>
    <string name="cannot_add_slide_anymore">"Can't add more slides."</string>
    <string name="cannot_add_picture_and_video">"Can't add video and picture to one slide."</string>
    <string name="cannot_save_message">"Can't save message."</string>
    <string name="message_saved_as_draft">Message saved as draft.</string>
    <string name="too_many_recipients">Message has too many recipients (%1$s). There is a limit of %2$s recipients.</string>
    <string name="too_many_attachments">There is a limit of %1$s attachments. Only the first %2$s will be added.</string>
    <string name="adding_attachments_title">Adding attachments</string>
    <string name="adding_attachments">Wait while the items are added to the slideshow.</string>
    <string name="building_slideshow_title">Building slideshow</string>
    <string name="cannot_play_audio">"Can't play audio."</string>
    <string name="preview">Preview</string>
    <string name="preview_slideshow">Preview</string>
    <string name="replace_image">Replace picture</string>
    <string name="duration_sec">Duration (%s sec)</string>
    <string name="duration_selector_title">"Duration for slide "</string>
    <string name="layout_selector_title">"Slideshow layout "</string>
    <string name="layout_top">Layout (top)</string>
    <string name="layout_bottom">Layout (bottom)</string>
    <string name="type_to_compose_text_or_leave_blank">Type message, or leave blank</string>
    <string name="pref_notification_settings_title">Notifications</string>
    <string name="pref_mms_settings_title">Multimedia (MMS) messages</string>
    <string name="pref_sms_settings_title">Text (SMS) messages</string>
    <string name="pref_sms_storage_title">Storage</string>
    <string name="pref_summary_manage_sim_messages">Manage messages stored on your SIM card</string>
    <string name="pref_summary_mms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_mms_read_reports">Request a read report for each message you send</string>
    <string name="pref_summary_sms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_auto_delete">Delete old messages as limits are reached</string>
    <string name="pref_summary_delete_limit">%1$s messages per conversation</string>
    <string name="pref_summary_mms_group_mms">Use MMS to send a single message when there are multiple recipients</string>
    <string name="pref_title_manage_sim_messages">Manage SIM card messages</string>
    <string name="pref_title_mms_delivery_reports">Delivery reports</string>
    <string name="pref_title_mms_group_mms">Group messaging</string>
    <string name="pref_title_mms_read_reports">Read reports</string>
    <string name="pref_title_sms_delivery_reports">Delivery reports</string>
    <string name="pref_title_auto_delete">Delete old messages</string>
    <string name="pref_title_sms_delete">Text message limit</string>
    <string name="pref_title_mms_delete">Multimedia message limit</string>
    <string name="pref_title_notification_enabled">Notifications</string>
    <string name="pref_summary_notification_enabled">Dispalay notification on status bar</string>
    <string name="pref_title_notification_vibrateWhen">Vibrate</string>
    <string name="pref_summary_notification_vibrateWhen">Also vibrate when notified</string>
    <string name="pref_title_notification_ringtone">Sound</string>
    <string name="prefDefault_vibrateWhen">never</string>
    <string name="prefDialogTitle_vibrateWhen">Vibrate</string>
    <string name="pref_title_mms_auto_retrieval">Auto-retrieve</string>
    <string name="pref_summary_mms_auto_retrieval">Automatically retrieve messages</string>
    <string name="pref_title_mms_retrieval_during_roaming">Roaming auto-retrieve</string>
    <string name="pref_summary_mms_retrieval_during_roaming">Automatically retrieve messages while roaming</string>
    <string name="pref_summary_message_template">Edit message template</string>
    <string name="pref_title_message_template">Message template</string>
    <string name="pref_title_mms_restricted_mode">Restricted Mode</string>
    <string name="pref_summary_mms_restricted_mode">Disable image Resizing and check image resolution</string>
    <string name="pref_sms_signature_title">SMS signature</string>
    <string name="pref_title_enable_signature">SMS signature</string>
    <string name="pref_summary_enable_signature">SMS signature enabled</string>
    <string name="pref_summary_disable_signature">SMS signature disabled</string>
    <string name="pref_title_edit_signature">Edit SMS signature</string>
    <string name="recent_label">Recent</string>
    <string name="contact_label">Contacts</string>
    <string name="group_label">Groups</string>
    <string name="pref_title_notification_priority">Priority</string>
    <string name="prefDialogTitle_priority">Priority</string>
    <string name="pref_title_notification_expiry">Expiry</string>
    <string name="prefDialogTitle_expiry">Expiry</string>
    <string name="default_cdma_priority">0</string>
    <string name="pref_title_cdma_priority">Message priority</string>
    <string name="pref_summary_cdma_priority">Priority of CDMA message</string>
    <string name="prefDialogTitle_cdma_priority">Priority</string>
    <string name="pref_title_storage_location">SMS Storage Location</string>
    <string name="pref_summary_storage_location">Set SMS priority storage location</string>
    <string name="prefDefault_storage_location">phone</string>
    <string name="prefDialogTitle_storage_location">SMS Storage Location</string>
    <string name="pref_service_information_title">Service Information</string>
    <string name="pref_title_wap_push_enabled">Enable WAP PUSH</string>
    <string name="pref_wap_push_enabled">Permit to receive WAP PUSH messages</string>
</resources>