<?xml version="1.0" encoding="utf-8"?>
<com.android.mms.ui.OtherAttachmentView android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/other_attachment_view" android:background="@drawable/attachment_editor_bg" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <ImageView android:id="@id/image_view" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:id="@id/attach_name" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:textColor="@android:color/black" android:id="@id/view_attach_button" android:visibility="gone" android:layout_width="100.0dip" android:layout_height="45.0dip" android:text="@string/view" style="?android:attr/buttonStyleSmall" />
        <Button android:textColor="@android:color/black" android:id="@id/replace_attach_button" android:visibility="gone" android:layout_width="100.0dip" android:layout_height="45.0dip" android:text="@string/replace" style="?android:attr/buttonStyleSmall" />
        <Button android:textColor="@android:color/black" android:id="@id/remove_attach_button" android:layout_width="100.0dip" android:layout_height="45.0dip" android:text="@string/remove" style="?android:attr/buttonStyleSmall" />
    </LinearLayout>
</com.android.mms.ui.OtherAttachmentView>