<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/recipients_subject_linear" android:paddingLeft="5.0dip" android:paddingTop="5.0dip" android:paddingRight="5.0dip" android:paddingBottom="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ViewStub android:id="@id/recipients_editor_stub" android:layout="@layout/recipients_editor" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <View android:background="@drawable/yep_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <LinearLayout android:orientation="horizontal" android:id="@id/recipients_button_linear" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip">
            <Button android:textColor="#ff000000" android:gravity="center" android:id="@id/recipients_calllog_button" android:background="@drawable/yep_btn_recipients" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="4.0dip" android:minWidth="85.0dip" android:minHeight="28.0dip" android:text="@string/recent_label" android:layout_weight="1.0" />
            <Button android:textColor="#ff000000" android:gravity="center" android:id="@id/recipients_all_button" android:background="@drawable/yep_btn_recipients" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="85.0dip" android:minHeight="28.0dip" android:text="@string/contact_label" android:layout_weight="1.0" />
            <Button android:textColor="#ff000000" android:gravity="center" android:id="@id/recipients_group_button" android:background="@drawable/yep_btn_recipients" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:minWidth="85.0dip" android:minHeight="28.0dip" android:text="@string/group_label" android:layout_weight="1.0" />
        </LinearLayout>
        <EditText android:textAppearance="?android:textAppearanceMediumInverse" android:textColor="@android:color/black" android:id="@id/subject" android:visibility="gone" android:nextFocusDown="@id/embedded_text_editor" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/subject_hint" android:singleLine="true" android:capitalize="sentences" android:autoText="true" />
    </LinearLayout>
    <LinearLayout android:gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <view android:scrollbarAlwaysDrawVerticalTrack="false" android:scrollbarStyle="insideOverlay" android:id="@id/history" android:paddingBottom="@dimen/input_text_height_adjusted" android:visibility="gone" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="1.0dip" android:drawSelectorOnTop="true" android:stackFromBottom="true" android:transcriptMode="disabled" android:cacheColorHint="@android:color/white" android:layout_weight="1.0" android:smoothScrollbar="false" class="com.android.mms.ui.MessageListView" style="?android:attr/listViewWhiteStyle" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ScrollView android:id="@id/attachment_editor_scroll_view" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0"
              xmlns:android="http://schemas.android.com/apk/res/android">
                <view android:orientation="vertical" android:id="@id/attachment_editor" android:layout_width="fill_parent" android:layout_height="wrap_content" class="com.android.mms.ui.AttachmentEditor">
                    <ViewStub android:id="@id/image_attachment_view_stub" android:layout="@layout/image_attachment_view" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <ViewStub android:id="@id/video_attachment_view_stub" android:layout="@layout/video_attachment_view" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <ViewStub android:id="@id/audio_attachment_view_stub" android:layout="@layout/audio_attachment_view" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <ViewStub android:id="@id/vcard_attachment_view_stub" android:layout="@layout/vcard_attachment_view" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <ViewStub android:id="@id/other_attachment_view_stub" android:layout="@layout/other_attachment_view" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <ViewStub android:id="@id/slideshow_attachment_view_stub" android:layout="@layout/slideshow_attachment_view" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                    <TextView android:textColor="#ffffffff" android:gravity="center" android:id="@id/tv_attachment_size" android:background="@drawable/attachment_size" android:paddingLeft="3.0dip" android:paddingRight="3.0dip" android:layout_width="wrap_content" android:layout_height="20.0dip" android:layout_marginLeft="200.0dip" android:layout_marginTop="-20.0dip" />
                </view>
            </ScrollView>
            <LinearLayout android:orientation="vertical" android:id="@id/bottom_panel" android:background="#30ffffff" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RelativeLayout android:orientation="horizontal" android:id="@id/relativeLayout1" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:layout_weight="1.0">
                    <EditText android:textSize="16.0sp" android:textColor="@android:color/black" android:id="@id/embedded_text_editor" android:background="#40ffffff" android:nextFocusRight="@id/send_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/input_text_height" android:hint="@string/type_to_compose_text_enter_to_send" android:maxLines="5" android:capitalize="sentences" android:autoText="true" android:layout_weight="1.0" android:inputType="textCapSentences|textAutoCorrect|textMultiLine|textShortMessage" android:imeOptions="actionDone|flagNoEnterAction" />
                    <ImageButton android:id="@id/smstemp_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/import_sms_template" android:layout_alignRight="@id/embedded_text_editor" style="?android:attr/borderlessButtonStyle" />
                    <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="#cc333333" android:gravity="top|center" android:id="@id/text_counter" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="2.0dip" android:layout_above="@id/smstemp_button" android:layout_alignRight="@id/embedded_text_editor" />
                    <ImageButton android:id="@id/send_button_sms" android:visibility="gone" android:nextFocusLeft="@id/embedded_text_editor" android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_marginLeft="4.0dip" android:src="@drawable/send_button_selector" android:drawablePadding="0.0dip" android:layout_weight="1.0" android:contentDescription="@string/send" style="?android:attr/borderlessButtonStyle" />
                </RelativeLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:layout_weight="1.0">
                    <TextView android:textSize="0.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/sub0_send_button" android:background="@drawable/yep_sim1_bg_selector" android:nextFocusLeft="@id/embedded_text_editor" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="1.0dip" android:layout_marginRight="1.0dip" android:drawableTop="@drawable/yep_sim1_fg_selector" android:drawablePadding="0.0dip" android:layout_weight="1.0" style="?android:attr/borderlessButtonStyle" />
                    <TextView android:textSize="0.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/sub1_send_button" android:background="@drawable/yep_sim2_bg_selector" android:visibility="gone" android:nextFocusLeft="@id/embedded_text_editor" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="1.0dip" android:layout_marginTop="1.0dip" android:drawableTop="@drawable/yep_sim2_fg_selector" android:drawablePadding="0.0dip" android:layout_weight="1.0" style="?android:attr/borderlessButtonStyle" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>